refactor: swap mongo with postgres
